--- a/index.html
+++ b/index.html
@@ -3,65 +3,44 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
-    <link rel="stylesheet" href="/bower_components/angular-material/themes/yellow-theme.css">
-    <style>
-        html {
-            height: 100%;
-        }
-
-        body {
-            background-color: #ececec;
-        }
-
-        footer {
-            padding: 16px;
-        }
-
-        .animate-if {
-            background:white;
-            border:1px solid black;
-            padding:10px;
-        }
-
-        .animate-if.ng-enter, .animate-if.ng-leave {
-            -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-            transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-        }
-
-        .animate-if.ng-enter,
-        .animate-if.ng-leave.ng-leave-active {
-            opacity:0;
-        }
-
-        .animate-if.ng-leave,
-        .animate-if.ng-enter.ng-enter-active {
-            opacity:1;
-        }
-    </style>
+    <link rel="stylesheet" href="/bower_components/angular-material/themes/blue-theme.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
-<body layout="vertical" md-theme="yellow" layout-fill ng-app="YourApp" ng-controller="YourController">
+<body layout="vertical" md-theme="blue" layout-fill ng-app="YourApp" ng-controller="YourController">
 <header>
     <md-toolbar scroll-shrink>
         <div class="md-toolbar-tools">
             <h3>
-                <span>SumBees</span>
+                <span>Angular Material Inbox</span>
             </h3>
         </div>
     </md-toolbar>
 </header>
 <div layout="vertical" flex>
-    <md-content>
-        <md-list>
+    <md-content layout="horizontal" layout-align="center">
+        <md-list id="content">
             <div ng-repeat="chunk in ::chunks">
-                <md-card ng-if="!chunk.expanded" ng-click="chunk.expanded = !chunk.expanded" layout="horizontal">
-                    <md-item>
-                    <h2>{{ chunk.title }}</h2>
-                    <p>{{ chunk.description }}</p>
+                <md-card ng-if="!chunk.expanded" ng-click="chunk.expanded = !chunk.expanded" ng-mouseover="hover = true" ng-mouseout="hover = false">
+                    <md-item layout="horizontal">
+                        <div>
+                            <img class="round-face" src="http://placekitten.com/g/48/48"/>
+                        </div>
+                        <div layout="horizontal" flex>
+                            <div layout="vertical" layout-align="center" flex="33">
+                                <span><b>{{ chunk.title }}</b></span>
+                            </div>
+                            <div layout="vertical" layout-align="center" flex="57">
+                                <span>{{ chunk.description }}</span>
+                            </div>
+                            <div layout="vertical" layout-align="center" flex="10" ng-if="hover">
+                                <span>Hover Elements</span>
+                            </div>
+                        </div>
                     </md-item>
                 </md-card>
                 <md-card ng-if="chunk.expanded" ng-click="chunk.expanded = !chunk.expanded">
                     <div layout="horizontal">
-                        <img src="http://placekitten.com/g/64/128"/>
+                        <img class="round-face" src="http://placekitten.com/g/48/48"/>
                         <div>
                             <h2>Some Post</h2>
                             <p>Some Description</p>
@@ -74,119 +53,55 @@
         </md-list>
     </md-content>
 </div>
-<footer layout="horizontal">
-    <div flex></div>
-    <md-button class="md-fab md-raised md-warn" ng-click="openDialog($event);" aria-label="New document">
-        <md-icon icon="/img/icons/ic_insert_drive_file_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+
+<div layout="vertical" layout-align="space-between" style="height: 260px; position: fixed; right: 40px; bottom: 90px;" ng-if="showAddButtons" ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}">
+    <md-button class="md-fab md-raised" ng-click="openDialog($event);" aria-label="New document">
+        <md-icon icon="bower_components/material-design-icons/content/svg/production/ic_add_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+        <md-tooltip>
+            Add Quote
+        </md-tooltip>
     </md-button>
-</footer>
+    <md-button class="md-fab md-raised" ng-click="openDialog($event);" aria-label="New document">
+        <md-icon icon="bower_components/material-design-icons/content/svg/production/ic_add_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+        <md-tooltip>
+            Add Text
+        </md-tooltip>
+    </md-button>
+    <md-button class="md-fab md-raised" ng-click="openDialog($event);" aria-label="New document">
+        <md-icon icon="bower_components/material-design-icons/content/svg/production/ic_add_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+        <md-tooltip>
+            Add Image
+        </md-tooltip>
+    </md-button>
+    <md-button class="md-fab md-raised" ng-click="openDialog($event);" aria-label="New document">
+        <md-icon icon="bower_components/material-design-icons/content/svg/production/ic_add_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+        <md-tooltip>
+            Add Video
+        </md-tooltip>
+    </md-button>
+</div>
+
+<md-button id="mainFab" class="md-fab md-raised" ng-click="showAddButtons = !showAddButtons;" aria-label="New document">
+    <md-icon icon="bower_components/material-design-icons/content/svg/production/ic_add_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+</md-button>
+<!--<md-bottom-sheet class="md-list md-has-header">-->
+    <!--<md-subheader>Comment Actions</md-subheader>-->
+    <!--<md-list>-->
+        <!--<md-item ng-repeat="item in items" ng-click="showGridBottomSheet($event)">-->
+            <!--<md-button>-->
+                <!--&lt;!&ndash; Using custom inline icon until md-icon is ready. DONT USE ME! &ndash;&gt;-->
+                <!--<md-inline-list-icon icon="{{item.icon}}"></md-inline-list-icon>-->
+                <!--<span class="md-inline-list-icon-label">{{ item.name }}</span>-->
+            <!--</md-button>-->
+        <!--</md-item>-->
+    <!--</md-list>-->
+<!--</md-bottom-sheet>-->
 
 <script src="/bower_components/angular/angular.js"></script>
 <script src="/bower_components/angular-aria/angular-aria.js"></script>
 <script src="/bower_components/angular-animate/angular-animate.js"></script>
 <script src="/bower_components/hammerjs/hammer.js"></script>
 <script src="/bower_components/angular-material/angular-material.js"></script>
-<script>
-    // Include app dependency on ngMaterial
-    var app = angular.module( 'YourApp', [ 'ngMaterial' ] );
-            app.controller("YourController", ['$scope', '$mdDialog', function($scope, $mdDialog) {
-
-                $scope.openDialog = function($event) {
-                    $mdDialog.show({
-                        targetEvent: $event,
-                        template:
-                        '<md-dialog>' +
-                        '  <md-content>Hello {{ userName }}!</md-content>' +
-                        '  <div class="md-actions">' +
-                        '    <md-button ng-click="closeDialog()">' +
-                        '      Close' +
-                        '    </md-button>' +
-                        '  </div>' +
-                        '</md-dialog>',
-                        controller: 'DialogController',
-                        onComplete: afterShowAnimation,
-                        locals: { name: 'Bobby' }
-                    });
-                    // When the 'enter' animation finishes...
-                    function afterShowAnimation(scope, element, options) {
-                        // post-show code here: DOM element focus, etc.
-                    }
-                };
-
-                $scope.chunks = [
-                    {
-                        title: "Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: false,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    },
-                    {
-                        title: "Another Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: true,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    },
-                    {
-                        title: "And even another Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: false,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    },
-                    {
-                        title: "And even another Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: false,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    },
-                    {
-                        title: "And even another Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: false,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    },
-                    {
-                        title: "And even another Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: false,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    },
-                    {
-                        title: "And even another Something",
-                        description: "Lorem Ipsum Dolor Set Shalalala",
-                        expanded: false,
-                        content: {
-                            type: "QUOTE",
-                            quote: "And he saw that it was good"
-                        }
-                    }
-                ];
-            }]);
-
-    app.controller('DialogController', function($scope, $mdDialog, name) {
-        $scope.userName = name;
-        $scope.closeDialog = function() {
-            $mdDialog.hide();
-        };
-    });
-</script>
-
+<script src="/controllers/controllers.js"></script>
 </body>
 </html>
