add img example

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                             <img class="round-face" src="http://placekitten.com/g/48/48"/>
                         </div>
                         <div flex>
+                            <img src="example/dell.jpg" />
                             <h2>{{ chunk.title }}</h2>
                             <p>{{ chunk.description }}</p>
                             <div ng-if="chunk.content && chunk.content.type === 'QUOTE'">
