--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                     </md-item>
                 </md-card>
-                <md-card ng-if="chunk.expanded && !chunk.diviedr" ng-click="chunk.expanded = !chunk.expanded">
+                <md-card ng-if="chunk.expanded && !chunk.divider" ng-click="chunk.expanded = !chunk.expanded">
                     <div layout="horizontal">
                         <div>
                             <img class="round-face" src="http://placekitten.com/g/48/48"/>
